feat: add pagination for prediction
- add pagination with page and limit for prediction
- run clean code pint.sh
- regenerate swagger
